[tool.poetry]
name = "lotto-game"
version = "0.1.0"
description = ""
authors = ["Nella <nella611@yandex.ru>"]
packages = [
  { include = "lotto_game" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-game = "lotto_game.scripts.lotto_game:hello"